objects/vlocity_cmt__CustomerInteractionTopic__c.object
<CustomObject>
    <description>A topic discussed or addressed during a customer interaction such as a customer account, a customer asset, a quote or a case. A topic could even be a specific field or aspect of an object such as a charge on a bill or a co-pay on a health insurance coverage.</description>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Discussed</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerInteractionId__c</fullName>
        <label>Customer Interaction</label>
        <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Outcome__c</fullName>
        <description>Captures the outcome or the end result of the customer interaction topic.</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessName__c</fullName>
        <description>Captures the guided process that has created the customer interaction topic.</description>
        <label>Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Reason__c</fullName>
        <description>Records the reason of the outcome.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cross Order Validation</fullName>
                </value>
                <value>
                    <fullName>Subscription Suspended</fullName>
                </value>
                <value>
                    <fullName>Suspension Reason Mismatch</fullName>
                </value>
                <value>
                    <fullName>Eligibility Check</fullName>
                </value>
                <value>
                    <fullName>Report Fraud</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Subscription Validation</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>Top-Up</fullName>
                </value>
                <value>
                    <fullName>Voucher Code Validation</fullName>
                </value>
                <value>
                    <fullName>Provide PUK</fullName>
                </value>
                <value>
                    <fullName>ICCID Validation</fullName>
                </value>
                <value>
                    <fullName>Change Feature</fullName>
                </value>
                <value>
                    <fullName>Credit Check Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Subscription related to the customer interaction topic.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Interaction Topic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__AccountId__c</columns>
        <columns>vlocity_cmt__CustomerInteractionId__c</columns>
        <columns>Roles__c</columns>
        <columns>vlocity_cmt__AssetId__c</columns>
        <columns>vlocity_cmt__CaseId__c</columns>
        <columns>vlocity_cmt__ContractId__c</columns>
        <columns>vlocity_cmt__OrderId__c</columns>
        <columns>vlocity_cmt__QuoteId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Interaction Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interaction Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>